<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F9FC">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutToolbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:padding="10dp"
            android:src="@drawable/ic_back_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:fontFamily="@font/poppins_bold"
            android:textColor="#008CFF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/layoutToolbar">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/btnLanguage"
            style="@style/SettingItemStyle">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_lang_blue" />

            <TextView
                style="@style/SettingTextStyle"
                android:text="@string/language"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/poppins_regular"/>

            <ImageView style="@style/SettingArrowStyle" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/btnShare"
            style="@style/SettingItemStyle"
            android:layout_marginTop="12dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_share_blue" />

            <TextView
                style="@style/SettingTextStyle"
                android:text="@string/share_app"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/poppins_regular"/>

            <ImageView style="@style/SettingArrowStyle" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/btnFeedback"
            style="@style/SettingItemStyle"
            android:layout_marginTop="12dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_lang_blue" />

            <TextView
                style="@style/SettingTextStyle"
                android:text="@string/feedback"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/poppins_regular"/>

            <ImageView style="@style/SettingArrowStyle" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>