<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:strokeColor="#EEEEEE"
        app:strokeWidth="1dp">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="WebViewLayout">

            <WebView
                android:id="@+id/webViewResult"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:background="@android:color/transparent"
                />
<!--            <ScrollView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="350dp"-->
<!--                android:fadeScrollbars="false"-->
<!--                android:scrollbarStyle="insideOverlay"-->
<!--                android:scrollbars="vertical">-->

<!--                <TextView-->
<!--                    android:id="@+id/tvResultDisplay"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:padding="16dp"-->
<!--                    android:textColor="#000000"-->
<!--                    android:textSize="16sp" />-->
<!--            </ScrollView>-->

            <ImageView
                android:id="@+id/ivFavourite"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="top|end"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_heart_outline"
                android:background="?attr/selectableItemBackgroundBorderless"/>
        </FrameLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStylize"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        app:backgroundTint="@null"
        android:background="@drawable/bg_button_white_blue_stroke"
        android:layout_marginHorizontal="16dp"
        app:rippleColor="@android:color/transparent"
        app:cornerRadius="25dp"
        app:icon="@drawable/ic_stylize"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="16sp"
        app:iconGravity="textStart"
        app:iconTint="#008DFF"
        android:text="@string/stylize"
        android:textAllCaps="false"
        android:textColor="#008DFF"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCopy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="@null"
            app:rippleColor="@android:color/transparent"
            android:background="@drawable/bg_button_gradient_blue"
            app:cornerRadius="25dp"
            app:backgroundTint="@null"
            app:icon="@drawable/ic_copy_white"
            app:iconGravity="textStart"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="16sp"
            android:text="@string/copy"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSend"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_gradient_green"
            app:cornerRadius="25dp"
            app:rippleColor="@android:color/transparent"
            app:backgroundTint="@null"
            app:icon="@drawable/ic_send_white"
            app:iconGravity="textStart"
            android:text="@string/send"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>