<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.example.nt.app.textrepeat.ui.custom.StrokeTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_toStartOf="@id/ivSettings"
                android:maxLines="1"
                android:text="@string/text_repeater"
                android:textColor="@color/white"
                android:fontFamily="@font/titanone_regular"
                android:textSize="28sp"
                android:textStyle="bold"
                />

            <ImageView
                android:id="@+id/ivSettings"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_settings_blue" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/banner_home" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/btnRepeatText"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/bg_menu_pink"
                android:gravity="center"
                android:orientation="vertical"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="82dp"
                    android:src="@drawable/ic_repeat_white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/repeat_text"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnSavedText"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/bg_menu_blue"
                android:gravity="center"
                android:orientation="vertical"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="82dp"
                    android:src="@drawable/ic_save_white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/saved_text"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <include
                android:id="@+id/sectionQuickRepeat"
                layout="@layout/layout_section_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />

            <include
                android:id="@+id/sectionRecent"
                layout="@layout/layout_section_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />

            <include
                android:id="@+id/sectionTrending"
                layout="@layout/layout_section_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />

<!--            <include-->
<!--                android:id="@+id/sectionSavedBottom"-->
<!--                layout="@layout/layout_section_container"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="16dp" />-->

        </LinearLayout>
    </LinearLayout>
</ScrollView>